--- a/style/style.css
+++ b/style/style.css
@@ -57,10 +57,10 @@ body {
 .menu_wrapper .menu {
   height: 78px;
   position: absolute;
-  left: 22px;
+  left: 1100px;
   top: 22px;
   right: 22px;
-  opacity: 1;
+  opacity: 0;
 }
 
 .menu_wrapper .content {
@@ -122,7 +122,7 @@ body {
   right: 87px;
   top:0px;
   bottom: 0px;
-  opacity: 1;
+  opacity: 0;
 }
 
 .nav li {
@@ -229,7 +229,7 @@ body {
   background: #4BC587;
   overflow: hidden;
   padding: 0px 20px;
-  height: 700px;
+  height: 600px;
   position: absolute;
   left: 0px;
   right: 0px;
@@ -241,7 +241,7 @@ body {
   top: 120px;
   left: 50%;
   margin-left: -98px;
-  opacity: 1;
+  opacity: 0;
 }
 
 .scene1 .light_left {
@@ -252,7 +252,7 @@ body {
   top: 50%;
   margin-top: -170px;
   -webkit-transform-origin: right bottom 0px;
-  /*-webkit-transform: rotateZ(-90deg);*/
+  -webkit-transform: rotateZ(-90deg);
 }
 .scene1 .light_right {
   position: absolute;
@@ -304,7 +304,7 @@ body {
   color: rgba(36,51,56,0.7);
   text-align: center;
   font-style: italic;
-  opacity: 1;
+  opacity: 0;
 }
 .scene1 .icons {
   margin-top: 20px;
